Fix how gallery looks on Safari

--- a/sbs-v2-prototype/index.less
+++ b/sbs-v2-prototype/index.less
@@ -22,11 +22,15 @@
     display: flex;
     flex-wrap: wrap;
 
-    img {
+    .image {
       width: 25%;
       min-width: 200px;
       flex: 1 1 auto;
       cursor: pointer;
+
+      img {
+        width: 100%;
+      }
     }
   }
 
